[package]
name = "habrcom-twibot"
version = "0.1.0"
authors = ["Vitalii Zymukha <unknownvzzv@gmail.com>"]
edition = "2018"

[dependencies]
config = "0.9"
scraper = "0.11.0"
# Let's start with blocking client
reqwest = { version = "0.10", features = ["blocking", "json"] }
rand = "0.7.3"
sanitize_html = "0.7.0"
egg-mode = "0.13.0"
tokio="0.1.22"
